--- a/org/src/Componets/Campo/Campo.css
+++ b/org/src/Componets/Campo/Campo.css
@@ -1,10 +1,10 @@
-.campo-texto{
+.campo{
     margin: 24px 0;
     font-family: 'Montserrat', 'sans-serif';
 
 }
 
-.campo-texto label{
+.campo label{
     font-family: 'Montserrat', 'sans-serif';
     font-size: 18px;
     font-weight: 600;
@@ -12,7 +12,7 @@
     margin-bottom: 8px;
 }
 
-.campo-texto input{
+.campo input{
     width: 100%;
     background-color: #ffffff;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.08);
